# yomichan_audio_server

./: .gitignore  Cargo.toml  README.md  config.json  start.bat  tray.rc
src/: cli.rs  config.rs  database.rs  error.rs  helper.rs  lib.rs  main.rs  test.rs
