[package]
name = "yomichan_audio_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4" }
actix-files = { version = "0.6.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
sysinfo = { version = "0.30.10" }
rayon = "1.10.0"
bimap = { version = "0.6.3", features = ["std"] }
# tray-icon = "0.15.1"
tray-item = "0.10.0"

[build-dependencies]
embed-resource = "2.4.3"
