[package]
name = "yomichan_audio_server"
version = "0.0.3"
edition = "2021"

[lib]
name = "json"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4" }
actix-files = { version = "0.6.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
sysinfo = { version = "0.30.10" }
rayon = "1.10.0"
bimap = { version = "0.6.3", features = ["std"] }
thiserror = "1.0.64"
clap = { version = "4.5.23", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
color-eyre = "0.6.3"
pretty_assertions = "1.4.1"
indexmap = { version = "2.7.1", features = ["serde"] }
color-print = "0.3.7"
strum = { version = "0.27.1", features = ["derive"] }

[target.'cfg(any(windows, linux))'.dependencies]
tray-item = "0.10.0"

[build-dependencies]
embed-resource = "3.0.1"

[profile.release]
codegen-units = 1
lto = "fat"
